--- a/scripts_notebooks/main.ipynb
+++ b/scripts_notebooks/main.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dmitry\\AppData\\Local\\Temp\\ipykernel_12924\\4080736814.py:1: DeprecationWarning: \n",
+      "C:\\Users\\Dmitry\\AppData\\Local\\Temp\\ipykernel_17148\\4080736814.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -26,34 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "XMLSyntaxError",
-     "evalue": "switching encoding: encoder error, line 1, column 1 (<string>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0m  File \u001b[0;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py:3553\u001b[0m in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
-      "\u001b[0m  Cell \u001b[0;32mIn[5], line 1\u001b[0m\n    data = pd.read_xml(r'..\\data\\data-20240416-structure-20160713.xml')\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32mc:\\Python312\\Lib\\site-packages\\pandas\\io\\xml.py:1160\u001b[0m in \u001b[0;35mread_xml\u001b[0m\n    return _parse(\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32mc:\\Python312\\Lib\\site-packages\\pandas\\io\\xml.py:852\u001b[0m in \u001b[0;35m_parse\u001b[0m\n    data_dicts = p.parse_data()\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32mc:\\Python312\\Lib\\site-packages\\pandas\\io\\xml.py:556\u001b[0m in \u001b[0;35mparse_data\u001b[0m\n    self.xml_doc = self._parse_doc(self.path_or_buffer)\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32mc:\\Python312\\Lib\\site-packages\\pandas\\io\\xml.py:647\u001b[0m in \u001b[0;35m_parse_doc\u001b[0m\n    document = fromstring(\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32msrc\\\\lxml\\\\etree.pyx:3287\u001b[0m in \u001b[0;35mlxml.etree.fromstring\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32msrc\\\\lxml\\\\parser.pxi:1989\u001b[0m in \u001b[0;35mlxml.etree._parseMemoryDocument\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32msrc\\\\lxml\\\\parser.pxi:1876\u001b[0m in \u001b[0;35mlxml.etree._parseDoc\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32msrc\\\\lxml\\\\parser.pxi:1164\u001b[0m in \u001b[0;35mlxml.etree._BaseParser._parseDoc\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32msrc\\\\lxml\\\\parser.pxi:633\u001b[0m in \u001b[0;35mlxml.etree._ParserContext._handleParseResultDoc\u001b[0m\n",
-      "\u001b[0m  File \u001b[0;32msrc\\\\lxml\\\\parser.pxi:743\u001b[0m in \u001b[0;35mlxml.etree._handleParseResult\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32msrc\\\\lxml\\\\parser.pxi:672\u001b[1;36m in \u001b[1;35mlxml.etree._raiseParseError\u001b[1;36m\n",
-      "\u001b[1;36m  File \u001b[1;32m<string>:1\u001b[1;36m\u001b[0m\n\u001b[1;31mXMLSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m switching encoding: encoder error, line 1, column 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = pd.read_xml(r'..\\data\\data-20240416-structure-20160713.xml')"
+    "data = pd.read_csv(r'C:\\Users\\Dmitry\\Documents\\tsu\\tsu_internship_case8\\data\\uni_data_status_joined_distinct_prepared.csv')"
    ]
   },
   {
@@ -82,21 +59,79 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Certificate</th>\n",
+       "      <th>EduOrgFullName</th>\n",
+       "      <th>ShortName</th>\n",
+       "      <th>RegionName</th>\n",
+       "      <th>FullName</th>\n",
+       "      <th>WebSite</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...</td>\n",
+       "      <td>РУАН ИМЕНИ Г.Б. МИРЗОЕВА</td>\n",
+       "      <td>г. Москва</td>\n",
+       "      <td>АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...</td>\n",
+       "      <td>АНО ВО «НАЦИОНАЛЬНЫЙ ИНСТИТУТ ДИЗАЙНА»</td>\n",
+       "      <td>г. Москва</td>\n",
+       "      <td>АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Автономная некоммерческая образовательная орга...</td>\n",
+       "      <td>АНОО ВО «Воронежский экономико-правовой инстит...</td>\n",
+       "      <td>Воронежская область</td>\n",
+       "      <td>Автономная некоммерческая образовательная орга...</td>\n",
+       "      <td>https://vepi.ru/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Автономная некоммерческая образовательная орга...</td>\n",
+       "      <td>АНООВО «ЕУСПб»</td>\n",
+       "      <td>г. Санкт-Петербург</td>\n",
+       "      <td>Автономная некоммерческая образовательная орга...</td>\n",
+       "      <td>eusp.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Автономная некоммерческая образовательная орга...</td>\n",
+       "      <td>АНООВО «КИУ»</td>\n",
+       "      <td>Калининградская область</td>\n",
+       "      <td>Автономная некоммерческая образовательная орга...</td>\n",
+       "      <td>www.kvshu39.ru</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Certificate\n",
-       "0          NaN"
+       "                                      EduOrgFullName  \\\n",
+       "0  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...   \n",
+       "1  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...   \n",
+       "2  Автономная некоммерческая образовательная орга...   \n",
+       "3  Автономная некоммерческая образовательная орга...   \n",
+       "4  Автономная некоммерческая образовательная орга...   \n",
+       "\n",
+       "                                           ShortName               RegionName  \\\n",
+       "0                           РУАН ИМЕНИ Г.Б. МИРЗОЕВА                г. Москва   \n",
+       "1             АНО ВО «НАЦИОНАЛЬНЫЙ ИНСТИТУТ ДИЗАЙНА»                г. Москва   \n",
+       "2  АНОО ВО «Воронежский экономико-правовой инстит...      Воронежская область   \n",
+       "3                                     АНООВО «ЕУСПб»       г. Санкт-Петербург   \n",
+       "4                                       АНООВО «КИУ»  Калининградская область   \n",
+       "\n",
+       "                                            FullName           WebSite  \n",
+       "0  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...               NaN  \n",
+       "1  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...               NaN  \n",
+       "2  Автономная некоммерческая образовательная орга...  https://vepi.ru/  \n",
+       "3  Автономная некоммерческая образовательная орга...          eusp.org  \n",
+       "4  Автономная некоммерческая образовательная орга...    www.kvshu39.ru  "
       ]
      },
      "execution_count": 8,
@@ -104,7 +139,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "data.head()"
+   ]
   },
   {
    "cell_type": "code",
