Readme update; New environment

--- a/scripts_notebooks/main.ipynb
+++ b/scripts_notebooks/main.ipynb
@@ -4,38 +4,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Dmitry\\AppData\\Local\\Temp\\ipykernel_17148\\4080736814.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(r'C:\\Users\\Dmitry\\Documents\\tsu\\tsu_internship_case8\\data\\uni_data_status_joined_distinct_prepared.csv')"
+    "data = pd.read_csv(r'../data/0.1_uni_data_sites_joined_distinct_prepared_filled.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +44,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>EduOrgFullName</th>\n",
        "      <th>ShortName</th>\n",
        "      <th>RegionName</th>\n",
        "      <th>FullName</th>\n",
@@ -69,23 +53,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...</td>\n",
        "      <td>РУАН ИМЕНИ Г.Б. МИРЗОЕВА</td>\n",
        "      <td>г. Москва</td>\n",
        "      <td>АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>https://raa.ru/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...</td>\n",
        "      <td>АНО ВО «НАЦИОНАЛЬНЫЙ ИНСТИТУТ ДИЗАЙНА»</td>\n",
        "      <td>г. Москва</td>\n",
        "      <td>АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>https://nid-design.org/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Автономная некоммерческая образовательная орга...</td>\n",
        "      <td>АНОО ВО «Воронежский экономико-правовой инстит...</td>\n",
        "      <td>Воронежская область</td>\n",
        "      <td>Автономная некоммерческая образовательная орга...</td>\n",
@@ -93,32 +74,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Автономная некоммерческая образовательная орга...</td>\n",
        "      <td>АНООВО «ЕУСПб»</td>\n",
        "      <td>г. Санкт-Петербург</td>\n",
        "      <td>Автономная некоммерческая образовательная орга...</td>\n",
-       "      <td>eusp.org</td>\n",
+       "      <td>https://eusp.org/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Автономная некоммерческая образовательная орга...</td>\n",
        "      <td>АНООВО «КИУ»</td>\n",
        "      <td>Калининградская область</td>\n",
        "      <td>Автономная некоммерческая образовательная орга...</td>\n",
-       "      <td>www.kvshu39.ru</td>\n",
+       "      <td>https://kiu39.ru/</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      EduOrgFullName  \\\n",
-       "0  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...   \n",
-       "1  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...   \n",
-       "2  Автономная некоммерческая образовательная орга...   \n",
-       "3  Автономная некоммерческая образовательная орга...   \n",
-       "4  Автономная некоммерческая образовательная орга...   \n",
-       "\n",
        "                                           ShortName               RegionName  \\\n",
        "0                           РУАН ИМЕНИ Г.Б. МИРЗОЕВА                г. Москва   \n",
        "1             АНО ВО «НАЦИОНАЛЬНЫЙ ИНСТИТУТ ДИЗАЙНА»                г. Москва   \n",
@@ -126,15 +98,15 @@
        "3                                     АНООВО «ЕУСПб»       г. Санкт-Петербург   \n",
        "4                                       АНООВО «КИУ»  Калининградская область   \n",
        "\n",
-       "                                            FullName           WebSite  \n",
-       "0  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...               NaN  \n",
-       "1  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...               NaN  \n",
-       "2  Автономная некоммерческая образовательная орга...  https://vepi.ru/  \n",
-       "3  Автономная некоммерческая образовательная орга...          eusp.org  \n",
-       "4  Автономная некоммерческая образовательная орга...    www.kvshu39.ru  "
+       "                                            FullName                  WebSite  \n",
+       "0  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...          https://raa.ru/  \n",
+       "1  АВТОНОМНАЯ НЕКОММЕРЧЕСКАЯ ОРГАНИЗАЦИЯ ВЫСШЕГО ...  https://nid-design.org/  \n",
+       "2  Автономная некоммерческая образовательная орга...         https://vepi.ru/  \n",
+       "3  Автономная некоммерческая образовательная орга...        https://eusp.org/  \n",
+       "4  Автономная некоммерческая образовательная орга...        https://kiu39.ru/  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
