Added search script for sisyphus

--- a/data_check.ipynb
+++ b/data_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "'https://raa.ru/sveden/files/PM.02_Programma_UP.02.01(1).pdf'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,22 +67,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"[{'title': 'PDF ПРОГРАММА ПРОИЗВОДСТВЕННОЙ ПРАКТИКИ (ПО ПРОФИЛЮ СПЕЦИАЛЬНОСТИ) ПП.01.01 ...', 'href': 'https://raa.ru/sveden/files/PM.01_Programma_PP.01.01(2).pdf', 'body': 'Перечень программного обеспечения, профессиональных баз данных, информационных справочных систем ресурсов'}, {'title': 'PDF МЕТОДИЧЕСКИЕ УКАЗАНИЯ ПО ОРГАНИЗАЦИИ ЛАБОРАТОРНЫХ РАБОТ ПО УЧЕБНОМУ ...', 'href': 'https://raa.ru/sveden/files/Informatika_UPPO_LR.pdf', 'body': 'Программное обеспечение (ПО) - это 2. Утилитарные программы предназначены для 3. ... Перечень программ Microsoft Office 1. 2. 3. и т.д. Перечень стандартных программ 1. 2.'}, {'title': 'PDF ПРОГРАММА УЧЕБНОЙ ПРАКТИКИ (УП.02.01 УЧЕБНАЯ ПРАКТИКА) ПМ.02 ...', 'href': 'https://raa.ru/sveden/files/PM.02_Programma_UP.02.01(1).pdf', 'body': 'Перечень программного обеспечения, профессиональных баз данных, информационных справочных систем ресурсов'}, {'title': 'PDF РАБОЧАЯ ПРОГРАММА ДИСЦИПЛИНЫ ОП.14. ИНФОРМАЦИОННЫЕ ТЕХНОЛОГИИ В ...', 'href': 'https://raa.ru/sveden/files/OP.14_Inf._texnologii_v_prof._deyatelynosti_RP_25.08.2020_Protokol_1_ochnaya_9_kl.pdf', 'body': '3.3. Перечень программного обеспечения, профессиональных баз данных, информационных справочных систем ресурсов информационно-'}, {'title': 'PDF РАБОЧАЯ ПРОГРАММА ДИСЦИПЛИНЫ ОП.15. БЕЗОПАСНОСТЬ ЖИЗНЕДЕЯТЕЛЬНОСТИ', 'href': 'https://raa.ru/sveden/files/OP.15_BGHD_RP_25.08.2020_Protokol_1_ochnaya_9_kl.pdf', 'body': '40.02.01 Право и организация социального обеспечения квалификация ... Перечень нормативных правовых документов, ... 16 3.3. Перечень программного обеспечения, ...'}]\""
+       "'https://raa.ru/sveden/files/PM.02_Programma_UP.02.01(1).pdf'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data['PathToSoft'].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.read_csv('./data/2.1_alt_unique_soft.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>microsoft-office</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>adobe-acrobat</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>abbyy-finereader</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>autodesk-autocad</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>microsoft-visual-studio</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ibm-spss-statistics</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>microsoft-project</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>graphpad-prism</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>adobe-photoshop</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cisco-packet-tracer</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>matlab</th>\n",
+       "      <td>cauchy-dev - library for transforming Matlab/O...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>erwin-data-modeler</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i-deas-nx-series</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>adobe-indesign</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>axima</th>\n",
+       "      <td>lp-solve - Solve (mixed integer) linear progra...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>qgis</th>\n",
+       "      <td>libqgis-3d3.34.4t64 - QGIS - shared 3d library...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>apache-netbeans</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>microsoft-visio</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ibm-infosphere-datastage</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>email-clients</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                          0\n",
+       "Unnamed: 0                                                                0\n",
+       "microsoft-office                                                        NaN\n",
+       "adobe-acrobat                                                           NaN\n",
+       "abbyy-finereader                                                        NaN\n",
+       "autodesk-autocad                                                        NaN\n",
+       "microsoft-visual-studio                                                 NaN\n",
+       "ibm-spss-statistics                                                     NaN\n",
+       "microsoft-project                                                       NaN\n",
+       "graphpad-prism                                                          NaN\n",
+       "adobe-photoshop                                                         NaN\n",
+       "cisco-packet-tracer                                                     NaN\n",
+       "matlab                    cauchy-dev - library for transforming Matlab/O...\n",
+       "erwin-data-modeler                                                      NaN\n",
+       "i-deas-nx-series                                                        NaN\n",
+       "adobe-indesign                                                          NaN\n",
+       "axima                     lp-solve - Solve (mixed integer) linear progra...\n",
+       "qgis                      libqgis-3d3.34.4t64 - QGIS - shared 3d library...\n",
+       "apache-netbeans                                                         NaN\n",
+       "microsoft-visio                                                         NaN\n",
+       "ibm-infosphere-datastage                                                NaN\n",
+       "email-clients                                                           NaN"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.T"
    ]
   },
   {
